@@ -26,8 +26,8 @@
 			"faces": {
 				"north": {"uv": [14, 14, 16, 16], "texture": "#side", "cullface": "north"},
 				"east": {"uv": [0, 14, 16, 16], "texture": "#side"},
-				"south": {"uv": [14, 14, 16, 16], "texture": "#side", "cullface": "south"},
-				"west": {"uv": [0, 14, 16, 16], "texture": "#side", "cullface": "west"},
+				"south": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "south"},
+				"west": {"uv": [0, 8, 16, 10], "texture": "#side", "cullface": "west"},
 				"up": {"uv": [16, 16, 14, 0], "texture": "#side"},
 				"down": {"uv": [16, 0, 14, 16], "texture": "#side"}
 			}
@@ -37,7 +37,7 @@
 			"from": [14, 6, 0],
 			"to": [16, 8, 16],
 			"faces": {
-				"north": {"uv": [14, 14, 16, 16], "texture": "#side", "cullface": "north"},
+				"north": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "north"},
 				"east": {"uv": [0, 14, 16, 16], "texture": "#side", "cullface": "east"},
 				"south": {"uv": [14, 14, 16, 16], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [0, 14, 16, 16], "texture": "#side"},
@@ -52,7 +52,7 @@
 			"rotation": {"angle": 22.5, "axis": "z", "origin": [8, 0, 8]},
 			"faces": {
 				"north": {"uv": [16, 12.02175, 14, 15.57812], "texture": "#side"},
-				"east": {"uv": [16, 12.02175, 0, 15.57812], "texture": "#side", "cullface": "east"},
+				"east": {"uv": [0, 12.02175, 16, 15.57812], "texture": "#side", "cullface": "east"},
 				"south": {"uv": [16, 12.02175, 14, 15.57812], "texture": "#side"},
 				"west": {"uv": [16, 9.02176, 0, 12.57813], "texture": "#side"},
 				"up": {"uv": [14, 16, 16, 0], "texture": "#side"},
