@@ -12,7 +12,7 @@
 			"to": [16, 16, 16],
 			"faces": {
 				"north": {"uv": [0, 0, 16, 8], "texture": "#side", "cullface": "north"},
-				"east": {"uv": [16, 0, 0, 8], "texture": "#side", "cullface": "east"},
+				"east": {"uv": [0, 0, 16, 8], "texture": "#side", "cullface": "east"},
 				"south": {"uv": [0, 0, 16, 8], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [0, 0, 16, 8], "texture": "#side", "cullface": "west"},
 				"up": {"uv": [0, 0, 16, 16], "texture": "#top", "cullface": "up"},
@@ -24,9 +24,9 @@
 			"from": [0, 6, 0],
 			"to": [2, 8, 16],
 			"faces": {
-				"north": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "north"},
+				"north": {"uv": [14, 8, 16, 10], "texture": "#side", "cullface": "north"},
 				"east": {"uv": [0, 14, 16, 16], "texture": "#side"},
-				"south": {"uv": [14, 8, 16, 10], "texture": "#side", "cullface": "south"},
+				"south": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [0, 8, 16, 10], "texture": "#side", "cullface": "west"},
 				"up": {"uv": [16, 16, 14, 0], "texture": "#side"},
 				"down": {"uv": [16, 0, 14, 16], "texture": "#side"}
@@ -37,9 +37,9 @@
 			"from": [14, 6, 0],
 			"to": [16, 8, 16],
 			"faces": {
-				"north": {"uv": [14, 8, 16, 10], "texture": "#side", "cullface": "north"},
+				"north": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "north"},
 				"east": {"uv": [0, 8, 16, 10], "texture": "#side", "cullface": "east"},
-				"south": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "south"},
+				"south": {"uv": [14, 8, 16, 10], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [0, 14, 16, 16], "texture": "#side"},
 				"up": {"uv": [16, 16, 14, 0], "texture": "#side"},
 				"down": {"uv": [16, 0, 14, 16], "texture": "#side"}
@@ -52,7 +52,7 @@
 			"rotation": {"angle": 22.5, "axis": "z", "origin": [8, 0, 8]},
 			"faces": {
 				"north": {"uv": [16, 12.02175, 14, 15.59374], "texture": "#side"},
-				"east": {"uv": [16, 12.02175, 0, 15.59374], "texture": "#side"},
+				"east": {"uv": [0, 12.02175, 16, 15.59374], "texture": "#side"},
 				"south": {"uv": [16, 12.02175, 14, 15.59374], "texture": "#side"},
 				"west": {"uv": [16, 9.02175, 0, 12.59374], "texture": "#side"},
 				"up": {"uv": [14, 16, 16, 0], "texture": "#side"},
@@ -68,8 +68,8 @@
 				"north": {"uv": [0.02175, 9, 3.99999, 11], "texture": "#side"},
 				"east": {"uv": [0, 14, 16, 16], "texture": "#side"},
 				"south": {"uv": [0, 9, 3.97824, 11], "texture": "#side"},
-				"west": {"uv": [0, 14, 16, 16], "texture": "#side"},
-				"up": {"uv": [15.99999, 16, 12.02175, 0], "texture": "#side"},
+				"west": {"uv": [0, 8, 16, 10], "texture": "#side"},
+				"up": {"uv": [12.02175, 16, 15.99999, 0], "texture": "#side"},
 				"down": {"uv": [7.97824, 0, 4, 16], "texture": "#side"}
 			}
 		},
